--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                 <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
                     <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-                        <use class="icon-cross" href="./images-psevdoelements/symbol-defs.svg#icon-close_40px"></use>
-                        <use class="icon-menu" href="./images-psevdoelements/symbol-defs.svg#icon-burger"></use>
+                        <use class="icon-cross" href="./images/images-psevdoelements/symbol-defs.svg#icon-close_40px"></use>
+                        <use class="icon-menu" href="./images/images-psevdoelements/symbol-defs.svg#icon-burger"></use>
                     </svg>
                 </button>
                 <div class="menu-container" data-menu>
@@ -51,7 +51,7 @@
                         <li class="item">
                             <a class="link icon-mail" href="mailto:info@devstudio.com">
                                 <svg class="icon-mail" width="18px" height="14px">
-                                    <use href="./images-psevdoelements/symbol-defs.svg#icon-envelope"></use>
+                                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-envelope"></use>
                                 </svg>
                                 info@devstudio.com
                             </a>
@@ -60,7 +60,7 @@
                         <li class="item">
                             <a class="link icon-tel" href="mailto:info@devstudio.com">
                                 <svg class="icon-tel" width="14px" height="20px">
-                                    <use href="./images-psevdoelements/symbol-defs.svg#icon-Vector"></use>
+                                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-Vector"></use>
                                 </svg>
                                 +38 096 111 11 11
                             </a>
@@ -84,7 +84,7 @@
                 <div class="modal">
                     <button data-modal-close type="button" class="button-modal">
                             <svg class="button-modal-icon" width="11px" height="11px">
-                                <use href="./images-psevdoelements/symbol-defs.svg#icon-christ"></use>
+                                <use href="./images/images-psevdoelements/symbol-defs.svg#icon-christ"></use>
                             </svg>
                         </button>
 
@@ -98,7 +98,7 @@
                             <div class="form-input_icon">
                                 <input class="form-input" type="text" name="name" id="name">
                                 <svg class="icon-modal" width="12px" height="12px">
-                                        <use href="./images-psevdoelements/modal.svg#icon-person"></use>
+                                        <use href="./images/images-psevdoelements/modal.svg#icon-person"></use>
                                     </svg>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                             <div class="form-input_icon">
                                 <input class="form-input" type="tel" name="tel" id="tel">
                                 <svg class="icon-modal" width="13px" height="13px">
-                                        <use href="./images-psevdoelements/modal.svg#icon-phone"></use>
+                                        <use href="./images/images-psevdoelements/modal.svg#icon-phone"></use>
                                     </svg>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                             <div class="form-input_icon">
                                 <input class="form-input" type="email" name="mail" id="mail">
                                 <svg class="icon-modal" width="15px" height="12px">
-                                        <use href="./images-psevdoelements/modal.svg#icon-envelope-modal"></use>
+                                        <use href="./images/images-psevdoelements/modal.svg#icon-envelope-modal"></use>
                                     </svg>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                         </div>
 
 
-                        <div class="agreement">
+                       <!-- <div class="agreement">
                             <input class="checkbox" type="checkbox" name="policy" id="policy">
                             <span class="empty-icon"></span>
                             <label class="policy-label" for="policy">Соглашаюсь с рассылкой и принимаю
@@ -138,8 +138,12 @@
                                         Условия договора</a>
                                 </label>
 
-                        </div>
-
+                        </div>-->
+<input class="checkbox" type="checkbox" name="policy" id="policy">
+<label class="policy-label" for="policy">Соглашаюсь с рассылкой и принимаю
+    <a class="conditions" href="">
+        Условия договора</a>
+</label>
 
                         <button class="submit-btn" type="submit">Отправить</button>
 
@@ -237,14 +241,14 @@
                             <li class="social-list">
                                 <a class="icon-social-link" href="">
                                     <svg class="icon-social" width="20px" height="20px">
-                                            <use href="./images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
+                                            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
                                         </svg>
                                 </a>
                             </li>
                             <li class="social-list">
                                 <a class="icon-social-link" href="">
                                     <svg class="icon-social" width="20px" height="20px">
-                                            <use href="./images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
+                                            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
                                         </svg>
                                 </a>
                             </li>
@@ -253,14 +257,14 @@
                     <li class="social-list">
                         <a class="icon-social-link" href="">
                             <svg class="icon-social" width="20px" height="20px">
-                                    <use href="./images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
+                                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
                                 </svg>
                         </a>
                     </li>
                     <li class="social-list">
                         <a class="icon-social-link" href="">
                             <svg class="icon-social" width="20px" height="20px">
-                                    <use href="./images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
+                                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
                                 </svg>
                         </a>
                     </li>
@@ -282,14 +286,14 @@
                             <li class="social-list">
                                 <a class="icon-social-link" href="">
                                     <svg class="icon-social" width="20px" height="20px">
-                                    <use href="./images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
+                                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list">
                                 <a class="icon-social-link" href="">
                                     <svg class="icon-social" width="20px" height="20px">
-                                    <use href="./images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
+                                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
                                 </svg>
                                 </a>
                             </li>
@@ -298,14 +302,14 @@
                     <li class="social-list">
                         <a class="icon-social-link" href="">
                             <svg class="icon-social" width="20px" height="20px">
-                            <use href="./images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
+                            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
                         </svg>
                         </a>
                     </li>
                     <li class="social-list">
                         <a class="icon-social-link" href="">
                             <svg class="icon-social" width="20px" height="20px">
-                            <use href="./images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
+                            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
                         </svg>
                         </a>
                     </li>
@@ -325,14 +329,14 @@
                             <li class="social-list">
                                 <a class="icon-social-link" href="">
                                     <svg class="icon-social" width="20px" height="20px">
-                            <use href="./images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
+                            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
                         </svg>
                                 </a>
                             </li>
                             <li class="social-list">
                                 <a class="icon-social-link" href="">
                                     <svg class="icon-social" width="20px" height="20px">
-                            <use href="./images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
+                            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
                         </svg>
                                 </a>
                             </li>
@@ -341,14 +345,14 @@
                     <li class="social-list">
                         <a class="icon-social-link" href="">
                             <svg class="icon-social" width="20px" height="20px">
-                    <use href="./images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
                 </svg>
                         </a>
                     </li>
                     <li class="social-list">
                         <a class="icon-social-link" href="">
                             <svg class="icon-social" width="20px" height="20px">
-                    <use href="./images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
                 </svg>
                         </a>
                     </li>
@@ -370,14 +374,14 @@ alt="michail ermakov" />
         <li class="social-list">
             <a class="icon-social-link" href="">
                 <svg class="icon-social" width="20px" height="20px">
-            <use href="./images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
+            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use>
         </svg>
             </a>
         </li>
         <li class="social-list">
             <a class="icon-social-link" href="">
                 <svg class="icon-social" width="20px" height="20px">
-            <use href="./images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
+            <use href="./images/images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use>
         </svg>
             </a>
         </li>
@@ -386,13 +390,13 @@ alt="michail ermakov" />
 <li class="social-list">
     <a class="icon-social-link" href="">
         <svg class="icon-social" width="20px" height="20px">
-    <use href="./images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
+    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use>
 </svg></a>
 </li>
 <li class="social-list">
     <a class="icon-social-link" href="">
         <svg class="icon-social" width="20px" height="20px">
-    <use href="./images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
+    <use href="./images/images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use>
 </svg></a>
 </li>
 </ul>
@@ -405,12 +409,12 @@ alt="michail ermakov" />
     <div class="container our-clients">
         <h3 class="our-clients-title">Постоянные клиенты</h3>
         <ul class="list clients-list">
-            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="44.27px" height="49.23px"><use href="./images-psevdoelements/symbol-defs.svg#icon-logo-1"></use></svg></a></li>
-            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="40px" height="52"><use href="./images-psevdoelements/symbol-defs.svg#icon-logo-2"></use></svg></a></li>
-            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="41px" height="42.6"><use href="./images-psevdoelements/symbol-defs.svg#icon-logo-3"></use></svg></a></li>
-            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="79.66px" height="42.02px"><use href="./images-psevdoelements/symbol-defs.svg#icon-logo-4"></use></svg></a></li>
-            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="59px" height="47px"><use href="./images-psevdoelements/symbol-defs.svg#icon-logo-5"></use></svg></a></li>
-            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="88.48px" height="45.44px"><use href="./images-psevdoelements/symbol-defs.svg#icon-logo-6"></use></svg></a></li>
+            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="44.27px" height="49.23px"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-logo-1"></use></svg></a></li>
+            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="40px" height="52"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-logo-2"></use></svg></a></li>
+            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="41px" height="42.6"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-logo-3"></use></svg></a></li>
+            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="79.66px" height="42.02px"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-logo-4"></use></svg></a></li>
+            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="59px" height="47px"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-logo-5"></use></svg></a></li>
+            <li class="icon-clients"><a class="icon-link" href=""><svg class="icon" width="88.48px" height="45.44px"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-logo-6"></use></svg></a></li>
         </ul>
     </div>
 </section>
@@ -423,17 +427,16 @@ alt="michail ermakov" />
             <div class="joing"><span class="invitation">присоединяйтесь</span>
                 <ul class="social invit">
                     <li class="social-list invit"><a class="icon-social-link invit" href=""><svg class="icon-social invit" width="20px" height="20px">
-<use href="./images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use></svg></a></li>
+<use href="./images/images-psevdoelements/symbol-defs.svg#icon-instagram-21"></use></svg></a></li>
                     <li class="social-list invit"><a class="icon-social-link invit" href=""><svg class="icon-social invit" width="20px" height="20px">
-<use href="./images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use></svg></a></li>
+<use href="./images/images-psevdoelements/symbol-defs.svg#icon-twitter-11"></use></svg></a></li>
                     </li>
-                    <li class="social-list invit"><a class="icon-social-link invit" href=""><svg class="icon-social invit" width="20px" height="20px"><use href="./images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
-                    <li class="social-list invit"><a class="icon-social-link invit" href=""><svg class="icon-social invit" width="20px" height="20px"><use href="./images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+                    <li class="social-list invit"><a class="icon-social-link invit" href=""><svg class="icon-social invit" width="20px" height="20px"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+                    <li class="social-list invit"><a class="icon-social-link invit" href=""><svg class="icon-social invit" width="20px" height="20px"><use href="./images/images-psevdoelements/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
                 </ul>
-                <!--</div>-->
             </div>
             <div class="subscribe-footer"><span class="subscribe">Подпишитесь на рассылку</span>
-                <div class="form-subscribe"><label for="mail"></label><input type="email" name="mail" id="mail" placeholder="E-mail"><button class="submit-footer" type="button">Подписаться<svg class="icon-subscribe" width="24px" height="24px"><use href="./images-psevdoelements/modal.svg#icon-send"></use></svg></button></div>
+                <div class="form-subscribe"><label for="mail"></label><input type="email" name="mail" id="mail" placeholder="E-mail"><button class="submit-footer" type="button">Подписаться<svg class="icon-subscribe" width="24px" height="24px"><use href="./images/images-psevdoelements/modal.svg#icon-send"></use></svg></button></div>
             </div>
     </div>
     </div>
