--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
           <ul class="flex-container list">
           
             <li class="flex-element">
-              <a class="link-img" ref=""
+              <a class="link-img" href=""
                 >
 <div class="overlay-card">
                 <img class="photogallery-img"
